tests/baselines/reference/dontShowCompilerGeneratedMembers.errors.txt
==== tests/cases/compiler/dontShowCompilerGeneratedMembers.ts (5 errors) ====
    var f: {
        ~
!!! error TS2322: Type 'number' is not assignable to type '{ <>(): any; x: number; }':
!!! error TS2322:   Property 'x' is missing in type 'Number'.
        x: number;
        <-
        ~
!!! error TS1098: Type parameter list cannot be empty.
         ~
!!! error TS1005: '(' expected.
         ~
!!! error TS1139: Type parameter declaration expected.
    };
    ~
!!! error TS1109: Expression expected.